--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,9 @@
     </head>
     <body>
     <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
+    {% if user.is_authenticated %}
+        <h1><a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></h1>
+    {% endif %}
     </div>
     <div class="content container">
         <div class="row">
